--- a/src/components/home/Contact.astro
+++ b/src/components/home/Contact.astro
@@ -9,7 +9,7 @@
         <p class="text-white text-sm font-light">07 69 76 26 36</p>
         <p class="text-white text-sm font-light">contact@cpacademy.fr</p>
     </header>
-    <form class="form-gradient flex flex-col justify-center py-8 px-6 mx-6 gap-4 mt-10 md:w-1/2">
+    <form class="form-gradient flex flex-col justify-center py-8 px-6 mx-6 gap-4 mt-10 md:w-1/2 2xl:w-1/3">
         <h4 class="text-white text-lg font-bold font-bestley mb-4">Formulaire de contact</h4>
         <input type="text" placeholder="Nom" class="w-full input">
         <input type="text" placeholder="Prénom" class="w-full input">
