--- a/src/components/home/Timeline.astro
+++ b/src/components/home/Timeline.astro
@@ -1,11 +1,11 @@
-<div class="timeline-container py-16 px-4 md:px-16">
+<div class="timeline-container py-16 px-4 md:px-16 flex flex-col items-center">
   <h2 class="text-center text-2xl md:text-3xl font-semibold mb-12 text-white">
     10 ans d'expertise
     <br /> 
     dans <span class="gradient-text">l'entreprenariat</span>
   </h2>
   
-  <div class="timeline relative max-w-4xl mx-auto md:mx-60 flex flex-col">
+  <div class="timeline relative max-w-4xl mx-auto md:mx-60 2xl:mx-[33rem] flex flex-col">
     <!-- Ligne verticale avec dégradé -->
     <div class="timeline-line absolute left-5 md:left-8 top-0 bottom-0 w-1 bg-gradient-to-b from-[#4158D0] via-[#C751C0] to-[#FFCB70]"></div>
     
@@ -17,10 +17,10 @@
           <img src="/src/assets/camille.png" alt="Photo de Camille Pernot" class="w-40 h-40 md:w-full object-cover rounded-tr-xl rounded-bl-xl">
         </div>
         <div class="flex flex-col md:w-2/3 md:pl-10">
-          <p class="text-white text-sm mb-4">
+          <p class="text-white text-sm mb-4 2xl:text-lg">
             Derrière CP Academy, il y a une femme, une vision, une ambition, c'est Camille Pernot.
           </p>
-        <p class="text-white text-sm">
+        <p class="text-white text-sm 2xl:text-lg">
           Avec 10 ans d'expérience dans l'entrepreneuriat, elle a su bâtir, structurer et propulser 15 entreprises, générant plusieurs millions d'euros de chiffre d'affaires. Mais au-delà des chiffres, c'est l'impact qui la motive : <span class="font-bold">transmettre, élever, transformer.</span>
         </p>
         </div>
@@ -31,7 +31,7 @@
     <div class="timeline-item flex opacity-0">
       <div class="timeline-dot bg-[#C751C0] rounded-full w-5 h-5 flex-shrink-0 z-10"></div>
       <div class="timeline-content ml-6 p-6 bg-none rounded-bl-xl rounded-tr-xl border-2 border-[#C751C0] flex-1">
-        <p class="text-white text-sm">
+        <p class="text-white text-sm 2xl:text-lg">
           Passionnée par le développement des talents, Camille a fondé CP Academy avec une conviction forte : <span class="font-bold">chaque individu a le potentiel d'atteindre l'excellence</span>, à condition d'avoir les bons outils et le bon accompagnement. C'est pourquoi elle a imaginé des offres de formation sur-mesure et certifiées.
         </p>
       </div>
