--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,16 +10,10 @@
 :root {
   --primary-color: #1e1e1e;
   --secondary-color: #f0f0f0;
-}
-
-@theme {
-  --primary: var(--primary-color);
-  --secondary: var(--secondary-color);
   --gradient-start: #4158d0;
   --gradient-middle: #c751c0;
   --gradient-end: #ffcb70;
 }
-
 .font-bestley {
   font-family: "Besley", serif;
 }
@@ -43,19 +37,21 @@ body {
 }
 
 .gradient-text {
-  background: rgb(65, 88, 208);
-  background: linear-gradient(
+  background-image: linear-gradient(
     90deg,
     rgba(65, 88, 208, 1) 0%,
     rgba(199, 81, 192, 1) 50%,
     rgba(255, 203, 112, 1) 100%
   );
+  background-size: 100% 100%;
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
+  display: inline-block;
+  padding: 0.05em 0;
 }
 
-h1 {
+.b h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
 }
