--- a/src/components/about/How.astro
+++ b/src/components/about/How.astro
@@ -30,7 +30,7 @@ const steps = [
             {step.number}
           </span>
         </div>
-        <p class="text-center text-white py-5 font-semibold text-sm font-montserrat">{step.title}</p>
+        <p class="text-center text-white py-5 font-semibold text-sm font-montserrat 2xl:px-16">{step.title}</p>
       </div>
     ))}
   </div>
