--- a/src/components/about/Hero.astro
+++ b/src/components/about/Hero.astro
@@ -1,10 +1,10 @@
-<header class="bg-primary text-white pt-32 flex justify-center md:justify-start md:pl-40 md:pt-48 md:pb-14 px-4 pb-4">
+<header class="bg-primary text-white pt-32 flex justify-center md:justify-start md:pl-40 md:pt-48 md:pb-14 2xl:pt-64 2xl:pl-96 px-4 pb-4">
     <h1 class="text-3xl md:text-5xl font-black leading-tight flex flex-col max-w-lg font-montserrat md:text-nowrap">
         Ne laissez pas votre <span class="gradient-text">avenir au hasard,</span>
         <span class="text-white text-sm md:text-lg font-medium pt-2 md:font-bold">utilisez votre CPF pour évoluer dès aujourd'hui !</span>
     </h1>
 </header>
-<div class="flex flex-col md:flex-row md:px-40 md:gap-10">
+<div class="flex flex-col md:flex-row md:px-40 2xl:px-96 md:gap-10">
 <section class="relative py-4 gradient-bg text-white px-8 mt-6 md:w-1/2 md:h-fit md:rounded-bl-3xl md:rounded-tr-3xl md:p-10 md:mt-0 ">
     <img src="/src/assets/entypo_quote.svg" alt="quote" class="w-full h-full absolute top-0 left-0 z-0">
     <p class="relative z-10">
