✨ Mise à jour des liens dans le composant Navbar pour les formations, amélioration des styles dans les composants "Article", "Avantages", "DownloadButton" et "Hero", et ajout d'une nouvelle page dynamique pour les formations. Les descriptions des formations ont également été enrichies.

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -37,8 +37,8 @@
               <details>
                 <summary>Nos formations</summary>
                 <ul class="rounded-t-none px-2 pb-2 pt-0 bg-black w-full rounded-b-xl">
-                  <li><a>Coiffure</a></li>
-                  <li><a>Esthétique</a></li>
+                  <li><a href="/formation/coiffure">Coiffure</a></li>
+                  <li><a href="/formation/esthetique">Esthétique</a></li>
                 </ul>
               </details>
             </li>
@@ -65,8 +65,8 @@
                 <details>
                   <summary>Nos formations</summary>
                   <ul class="menu menu-vertical gap-4 pl-4 text-xl">
-                    <li class="mt-6"><a>Coiffure</a></li>
-                    <li><a>Esthétique</a></li>
+                    <li class="mt-6"><a href="/formation/coiffure">Coiffure</a></li>
+                    <li><a href="/formation/esthetique">Esthétique</a></li>
                   </ul>
                 </details>
               </li>
