--- a/src/components/formation/Avantages.astro
+++ b/src/components/formation/Avantages.astro
@@ -28,7 +28,7 @@ const avantages = [
           <img 
             src={avantage.icon} 
             alt="" 
-            class={`w-16 h-16 ${avantage.color} object-contain`}
+            class={`w-14 h-14 ${avantage.color} object-cover`}
             aria-hidden="true"
           />
         </div>
