--- a/src/pages/formation/[formation].astro
+++ b/src/pages/formation/[formation].astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import DownloadButton from '../components/formation/DownloadButton.astro';
-import { formations } from '../data/formations';
-import Hero from '../components/formation/Hero.astro';
-import Article from '../components/formation/Article.astro';
+import Layout from '../../layouts/Layout.astro';
+import DownloadButton from '../../components/formation/DownloadButton.astro';
+import { formations } from '../../data/formations';
+import Hero from '../../components/formation/Hero.astro';
+import Article from '../../components/formation/Article.astro';
 
 export function getStaticPaths() {
   // Génère automatiquement les routes à partir des clés de l'objet formations
