--- a/src/components/formation/Article.astro
+++ b/src/components/formation/Article.astro
@@ -17,24 +17,24 @@ import Avantages from './Avantages.astro';
 import DownloadButton from './DownloadButton.astro';
 ---
 
-<section class="py-12 md:flex md:flex-row md:justify-center md:items-center md:pl-32">
+<section class="py-12 md:flex md:flex-row md:justify-center md:items-center md:pl-32 2xl:pl-72 2xl:gap-16">
   <Avantages />
-  <div class="relative py-4 gradient-bg text-white px-8 mt-6 md:w-1/2 md:h-fit md:p-10 md:mt-0">
-    <p class="relative z-10 py-6 font-bestley text-5xl md:text-6xl md:leading-8 font-bold px-10 md:px-40 text-center leading-6">
-      96% <span class="font-montserrat text-xl md:text-2xl text-nowrap">de réussite</span>
+  <div class="relative py-4 gradient-bg text-white px-8 mt-6 md:w-1/2 md:h-fit md:p-10 md:mt-0 2xl:pl-5">
+    <p class="relative z-10 py-6 font-bestley text-5xl md:text-6xl md:leading-8 font-bold px-10 md:px-40 2xl:text-7xl 2xl:px-80 text-center leading-6">
+      96% <span class="font-montserrat text-xl md:text-2xl 2xl:text-3xl text-nowrap">de réussite</span>
     </p>
   </div>
 </section>
 <div class="flex flex-col md:flex-row-reverse md:pr-20 md:gap-20 md:mt-10">
-<article class="px-8 md:w-1/2">
-  <h2 class="text-xl font-semibold text-white font-bestley mb-6">
+<article class="px-8 md:w-1/2 2xl:pr-36">
+  <h2 class="text-xl 2xl:text-3xl font-semibold text-white font-bestley mb-6 2xl:mt-12">
     Présentation de la formation métier de {formationData.title}
   </h2>
-  <p class="text-white mb-2">
+  <p class="text-white mb-2 2xl:text-xl 2xl:mt-10">
     {formationData.description}
   </p>
   {formationData.list && (
-    <ul class="list-disc list-inside text-white">
+    <ul class="list-disc list-inside text-white 2xl:text-xl 2xl:mt-10">
       {formationData.list.map((item: string) => (
         <li class="mb-2">{item}</li>
       ))}
@@ -46,7 +46,7 @@ import DownloadButton from './DownloadButton.astro';
       class="gradient-hover"
       />
 </article>
-<div class="relative flex justify-center items-center md:w-1/2">
+<div class="relative flex justify-center items-center md:w-1/2 2xl:mb-40">
     <img src={formationData.image} alt={formationData.title} class="w-full h-40 md:h-full object-cover mt-10 md:mt-0" />
     <img src="../src/assets/sign.svg" alt="" class="absolute w-15 h-15 bottom-2 right-5" />
 </div>
