--- a/src/components/formation/Hero.astro
+++ b/src/components/formation/Hero.astro
@@ -1,15 +1,16 @@
-<header class="bg-primary text-white pt-32 flex flex-col justify-center md:flex-row md:justify-center md:px-40 md:pt-48 md:pb-14 px-4 pb-4">
-    <h1 class="text-3xl md:text-5xl font-bold leading-tight flex flex-col font-montserrat md:w-2/3">
+<header class="bg-primary text-white pt-32 flex flex-col justify-center items-center md:flex-row md:justify-center md:px-40 md:pt-48 md:pb-14 2xl:px-80 2xl:pt-80 2xl:pb-32 px-4 pb-4">
+    <h1 class="text-3xl md:text-5xl font-bold leading-tight flex flex-col font-montserrat md:w-2/3 2xl:w-1/2 mb-8 md:mb-0">
         CP ACADEMY, des métiers pour <span class="gradient-text">exprimer votre talent.</span>
     </h1>
-    <div class="flex gap-4 pt-8 md:w-1/3">
-    <div class="flex flex-col justify-center w-1/2 items-center gap-4 border-2 border-[var(--gradient-start)] rounded-bl-2xl rounded-tr-2xl p-2 md:p-4">
-        <p class="text-5xl font-bold font-bestley h-[60px] flex items-center">1</p>
-            <p class="text-sm font-bold font-montserrat">Enseigne</p>
-        </div>
-        <div class="flex flex-col md:w-1/2 justify-center items-center gap-4 border-2 border-[var(--gradient-middle)] rounded-bl-2xl rounded-tr-2xl p-2">
-            <p class="text-5xl font-bold font-bestley h-[60px] flex items-center">10</p>
-            <p class="text-xs font-bold text-center font-montserrat">années d'expérience</p>
+    <div class="flex gap-4 pt-8 md:pt-0 md:w-1/3 2xl:w-1/2 2xl:pt-0 2xl:gap-6 justify-center items-center">
+        <div class="flex flex-col justify-center items-center gap-4 border-2 border-[var(--gradient-start)] rounded-bl-4xl rounded-tr-4xl p-2 md:p-4 w-40 h-40">
+            <p class="text-5xl font-bold font-bestley h-[60px] flex items-center">1</p>
+                <p class="text-sm font-bold font-montserrat">Enseigne</p>
+            </div>
+            <div class="flex flex-col justify-center items-center gap-4 border-2 border-[var(--gradient-middle)] rounded-bl-4xl rounded-tr-4xl p-2 w-40 h-40">
+                <p class="text-5xl font-bold font-bestley h-[60px] flex items-center">10</p>
+                <p class="text-xs font-bold text-center font-montserrat">années d'expérience</p>
+            </div>
         </div>
     </div>
 </header>
