✨ Mise à jour de la configuration d'Astro pour inclure l'output serveur et l'intégration de SendGrid. Ajout d'une nouvelle image pour la formation en esthétique, refonte des composants "Article" et "DownloadButton" pour une meilleure gestion des données de formation, et amélioration des styles dans le formulaire de contact. Création de nouvelles pages pour les mentions légales et la politique de confidentialité, ainsi qu'un nouvel endpoint API pour l'envoi d'emails via SendGrid.

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -34,13 +34,7 @@
             <!-- Navbar menu content here -->
             <li><a href="/">Accueil</a></li>
             <li class="dropdown-menu hover:bg-black/20">
-              <details>
-                <summary>Nos formations</summary>
-                <ul class="rounded-t-none px-2 pb-2 pt-0 bg-black w-full rounded-b-xl">
-                  <li><a href="/formation/coiffure">Coiffure</a></li>
-                  <li><a href="/formation/esthetique">Esthétique</a></li>
-                </ul>
-              </details>
+                <a href="/formation">Nos formations</a>
             </li>
             <li><a href="/about">Groupe CP</a></li>
           </ul>
