--- a/src/components/about/Article.astro
+++ b/src/components/about/Article.astro
@@ -49,7 +49,7 @@ const sections = [
     <div class="md:flex md:items-center md:justify-between">
       <header class="flex flex-col justify-center items-center gap-4 p-6 md:w-1/2 md:items-start md:pl-12">
         <h2 class="text-xl font-bold pb-4 gradient-text md:text-4xl">Toutes les formations du groupe CP Academy</h2>
-        <button class="btn border border-black bg-none md:mt-5 rounded-bl-2xl rounded-tr-2xl w-fit hover:bg-black hover:text-white">
+        <button onclick="window.location.href='/#formations'" class="btn border border-black bg-none md:mt-5 rounded-bl-2xl rounded-tr-2xl w-fit hover:bg-black hover:text-white">
           Découvrir
         </button>
       </header>
