--- a/src/components/formation/Article.astro
+++ b/src/components/formation/Article.astro
@@ -1,20 +1,10 @@
 ---
-interface Props {
-  formationData: {
-    title: string;
-    description: string;
-    list?: string[];
-    image?: string;
-    brochure: {
-      path: string;
-      fileName: string;
-    };
-  }
-}
-
-const { formationData } = Astro.props;
+import { formations, type Formation } from '../../data/formations';
 import Avantages from './Avantages.astro';
 import DownloadButton from './DownloadButton.astro';
+
+// Convertir l'objet formations en tableau
+const formationsArray = Object.values(formations);
 ---
 
 <section class="py-12 md:flex md:flex-row md:justify-center md:items-center md:pl-32 2xl:pl-72 2xl:gap-16">
@@ -25,41 +15,43 @@ import DownloadButton from './DownloadButton.astro';
     </p>
   </div>
 </section>
-<div class="flex flex-col md:flex-row-reverse md:pr-20 md:gap-20 md:mt-10">
-<article class="px-8 md:w-1/2 2xl:pr-36">
-  <h2 class="text-xl 2xl:text-3xl font-semibold text-white font-bestley mb-6 2xl:mt-12">
-    Présentation de la formation métier de {formationData.title}
-  </h2>
-  <p class="text-white mb-2 2xl:text-xl 2xl:mt-10">
-    {formationData.description}
-  </p>
-  {formationData.list && (
-    <ul class="list-disc list-inside text-white 2xl:text-xl 2xl:mt-10">
-      {formationData.list.map((item: string) => (
-        <li class="mb-2">{item}</li>
-      ))}
-    </ul>
-  )}
-      <DownloadButton 
-      filePath={formationData.brochure.path}
-      fileName={formationData.brochure.fileName}
-      class="gradient-hover"
-      />
-</article>
-<div class="relative flex justify-center items-center md:w-1/2 2xl:mb-40">
-    <img src={formationData.image} alt={formationData.title} class="w-full h-40 md:h-full object-cover mt-10 md:mt-0" />
-    <img src="../src/assets/sign.svg" alt="" class="absolute w-15 h-15 bottom-2 right-5" />
-</div>
-</div>
 
+{formationsArray.map((formation, index) => (
+  <div id={formation.title} class={`flex flex-col items-center 2xl:items-start mt-12 mb-32 2xl:mb-0 ${index === 0 ? 'md:flex-row-reverse md:pr-20' : 'md:flex-row md:pl-20'} md:gap-20 md:mt-10 md:justify-center`}>
+    <article class={`w-full px-8 md:w-1/2 ${index === 0 ? '2xl:pr-36' : '2xl:pl-36'} flex flex-col`}>
+      <h2 class="text-xl 2xl:text-3xl font-semibold text-white font-bestley mb-6 2xl:mt-16">
+        Présentation de la formation métier de {formation.title}
+      </h2>
+      <p class="text-white mb-2 2xl:text-xl 2xl:mt-10">
+        {formation.description}
+      </p>
+      {formation.list && (
+        <ul class="list-disc list-inside text-white 2xl:text-xl">
+          {formation.list.map((item: string) => (
+            <li class="mb-2">{item}</li>
+          ))}
+        </ul>
+      )}
+      <DownloadButton 
+        filePath={formation.brochure.path}
+        fileName={formation.brochure.fileName}
+        class="gradient-hover"
+      />
+    </article>
+    <div class="relative flex justify-center items-center w-[100vw] md:w-1/2 2xl:mb-40">
+      <img src={formation.image} alt={formation.title} class="w-full h-auto md:h-[400px] 2xl:h-full object-cover mt-10 md:mt-0" />
+      <img src="../src/assets/sign.svg" alt="" class="absolute w-15 h-15 bottom-2 right-5" />
+    </div>
+  </div>
+))}
 
 <style>
-    .gradient-bg {
-        background: linear-gradient(
-            45deg,
-            rgba(65, 88, 208, 0.8) 0%,
-            rgba(199, 81, 192, 0.8) 50%,
-            rgba(255, 203, 112, 0.8) 100%
-        );
-    }
+  .gradient-bg {
+    background: linear-gradient(
+      45deg,
+      rgba(65, 88, 208, 0.8) 0%,
+      rgba(199, 81, 192, 0.8) 50%,
+      rgba(255, 203, 112, 0.8) 100%
+    );
+  }
 </style>
