--- a/src/pages/formation.astro
+++ b/src/pages/formation.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Layout from '../layouts/Layout.astro';
 import DownloadButton from '../components/formation/DownloadButton.astro';
 import { formations } from '../data/formations';
