--- a/src/components/about/How.astro
+++ b/src/components/about/How.astro
@@ -2,17 +2,17 @@
 const steps = [
   {
     number: 1,
-    bg: "./src/assets/quarter-blue.svg",
+    bg: "/assets/quarter-blue.svg",
     title: "Sélectionnez la formation qui correspond à vos besoins et aspirations"
   },
   {
     number: 2,
-    bg: "./src/assets/quarter-pink.svg",
+    bg: "/assets/quarter-pink.svg",
     title: "Nous vous guidons dans la démarche CPF pour un financement total ou partiel"
   },
   {
     number: 3,
-    bg: "./src/assets/quarter-yellow.svg",
+    bg: "/assets/quarter-yellow.svg",
     title: "Débutez votre formation et faites évoluer votre carrière !"
   }
 ];
