--- a/src/components/formation/Article.astro
+++ b/src/components/formation/Article.astro
@@ -40,7 +40,7 @@ const formationsArray = Object.values(formations);
     </article>
     <div class="relative flex justify-center items-center w-[100vw] md:w-1/2 2xl:mb-40">
       <img src={formation.image} alt={formation.title} class="w-full h-auto md:h-[400px] 2xl:h-full object-cover mt-10 md:mt-0" />
-      <img src="../src/assets/sign.svg" alt="" class="absolute w-15 h-15 bottom-2 right-5" />
+      <img src="/assets/sign.svg" alt="" class="absolute w-15 h-15 bottom-2 right-5" />
     </div>
   </div>
 ))}
