--- a/src/components/formation/Avantages.astro
+++ b/src/components/formation/Avantages.astro
@@ -1,20 +1,20 @@
 ---
 const avantages = [
   {
-    icon: "../src/assets/icons/time.svg",
+    icon: "/assets/icons/time.svg",
     text: "Commencez quand vous voulez",
     color: "text-[#4158D0]" // Bleu
   },
   {
-    icon: "../src/assets/icons/desktop.svg",
+    icon: "/assets/icons/desktop.svg",
     text: "100% à distance",
   },
   {
-    icon: "../src/assets/icons/validate.svg",
+    icon: "/assets/icons/validate.svg",
     text: "Éligible au CPF",
   },
   {
-    icon: "../src/assets/icons/certif.svg",
+    icon: "/assets/icons/certif.svg",
     text: "Diplôme certifiant",
   }
 ];
