--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,10 @@
 <footer class="footer-gradient flex flex-col items-center justify-center py-10 mt-10 bg-[#121212]">
     <section class="flex justify-center items-center gap-4">
         <a href="https://www.instagram.com/cpacademy/" target="_blank">
-            <img src="/src/assets/insta.svg" alt="Instagram" class="w-10 h-10">
+            <img src="/assets/insta.svg" alt="Instagram" class="w-10 h-10">
         </a>
         <a href="https://www.facebook.com/profile.php?id=100088929648926" target="_blank">
-            <img src="/src/assets/facebook.svg" alt="Facebook" class="w-10 h-10">
+            <img src="/assets/facebook.svg" alt="Facebook" class="w-10 h-10">
         </a>
     </section>
     <section class="flex justify-center items-center gap-2 pt-4">
