--- a/src/components/about/Hero.astro
+++ b/src/components/about/Hero.astro
@@ -6,7 +6,7 @@
 </header>
 <div class="flex flex-col md:flex-row md:px-40 2xl:px-96 md:gap-10">
 <section class="relative py-4 gradient-bg text-white px-8 mt-6 md:w-1/2 md:h-fit md:rounded-bl-3xl md:rounded-tr-3xl md:p-10 md:mt-0 ">
-    <img src="/src/assets/entypo_quote.svg" alt="quote" class="w-full h-full absolute top-0 left-0 z-0">
+    <img src="/assets/entypo_quote.svg" alt="quote" class="w-full h-full absolute top-0 left-0 z-0">
     <p class="relative z-10">
         "Dans un monde en constante évolution, se former est essentiel pour progresser, se reconvertir ou renforcer ses compétences. CP ACADEMY est votre partenaire de confiance pour atteindre vos objectifs professionnels grâce à des formations certifiées et financées par le CPF."
     </p>
@@ -14,7 +14,7 @@
 
 <section class="flex flex-col p-6 border-2 border-[var(--gradient-start)] text-white rounded-bl-2xl rounded-tr-2xl m-6 mt-12 md:w-1/2 md:mt-0 md:rounded-bl-3xl md:rounded-tr-3xl md:m-0 md:justify-center">
     <h3 class="text-2xl font-bold pb-4 font-bestley">Qui sommes-nous ?</h3>
-    <p>CP ACADEMY est une organisme de formation dédié aux particuliers souhaitant évoluer professionnellement. Nous proposons des <span class="font-bold">parcours d’apprentissage de qualité</span>, adaptés aux exigences du marché de l’emploi.</p>
+    <p>CP ACADEMY est une organisme de formation dédié aux particuliers souhaitant évoluer professionnellement. Nous proposons des <span class="font-bold">parcours d'apprentissage de qualité</span>, adaptés aux exigences du marché de l'emploi.</p>
 </section>
 </div>
 
