--- a/src/components/home/Contact.astro
+++ b/src/components/home/Contact.astro
@@ -1,7 +1,7 @@
 <section id="contact" class="md:flex md:flex-col md:items-center md:justify-center">
     <header class="flex flex-col items-center justify-center">
-        <img src="/src/assets/logo.svg" alt="Logo CP Academy" class="w-40 h-40 md:hidden">
-        <video src="/src/assets/logo-video.webm" autoplay muted class="w-[60%] md:block hidden"></video>
+        <img src="/assets/logo.svg" alt="Logo CP Academy" class="w-40 h-40 md:hidden">
+        <video src="/assets/logo-video.webm" autoplay muted class="w-[60%] md:block hidden"></video>
         <h3 class="text-lg font-bold font-bestley mb-4 text-white">
             CP Academy
         </h3>
