--- a/src/components/about/Article.astro
+++ b/src/components/about/Article.astro
@@ -54,7 +54,7 @@ const sections = [
         </button>
       </header>
       <div class="md:w-1/2 md:h-full md:m-0 md:p-0">
-        <img src="/src/assets/coiffeuse.png" class="w-full h-full object-cover md:h-64" alt="Coiffeuse">
+        <img src="/assets/coiffeuse.png" class="w-full h-full object-cover md:h-64" alt="Coiffeuse">
       </div>
     </div>
   </section>
