--- a/src/components/home/Timeline.astro
+++ b/src/components/home/Timeline.astro
@@ -14,7 +14,7 @@
       <div class="timeline-dot bg-[#4158D0] rounded-full w-5 h-5 flex-shrink-0 z-10"></div>
       <div class="timeline-content ml-6 p-6 bg-none rounded-bl-xl flex-col flex rounded-tr-xl border-2 border-[#4158D0] md:flex-row md:items-center">
         <div class="mb-4 flex justify-center md:w-1/3 md:mb-0">
-          <img src="/src/assets/camille.png" alt="Photo de Camille Pernot" class="w-40 h-40 md:w-full object-cover rounded-tr-xl rounded-bl-xl">
+          <img src="/assets/camille.png" alt="Photo de Camille Pernot" class="w-40 h-40 md:w-full object-cover rounded-tr-xl rounded-bl-xl">
         </div>
         <div class="flex flex-col md:w-2/3 md:pl-10">
           <p class="text-white text-sm mb-4 2xl:text-lg">
